content: update config, styles, and devlog/geo content
- Update src/content/config.ts and src/utils/content.ts for new content structure
- Update global.css for improved accessibility and design
- Update devlog and geo content files for accuracy and consistency

Supports new citation/resource system and platform improvements.

--- a/src/content/devlog/2-interactive-components.mdx
+++ b/src/content/devlog/2-interactive-components.mdx
@@ -5,6 +5,7 @@ publishDate: 2025-05-22
 series: "devlog"
 order: 2
 coverImage: "/images/devlog-2-cover.svg"
+draft: false
 ---
 
 import CalloutBox from '../../components/CalloutBox.astro';
