--- a/src/content/devlog/4-deployment-and-debugging.mdx
+++ b/src/content/devlog/4-deployment-and-debugging.mdx
@@ -6,6 +6,7 @@ series: "devlog"
 order: 4
 coverImage: "/images/devlog-4-cover.svg"
 tags: ["deployment", "github-pages", "debugging", "workflow", "domains"]
+draft: false
 ---
 
 import CalloutBox from '../../components/CalloutBox.astro';
