--- a/src/content/devlog/5-cover-redesign.mdx
+++ b/src/content/devlog/5-cover-redesign.mdx
@@ -6,6 +6,7 @@ series: "devlog"
 order: 5
 coverImage: "/images/devlog-5-cover.svg"
 tags: ["design", "svg", "grid-system", "debugging", "xml"]
+draft: false
 ---
 
 import CalloutBox from '../../components/CalloutBox.astro';
