--- a/src/content/devlog/8-newsletter-system.mdx
+++ b/src/content/devlog/8-newsletter-system.mdx
@@ -6,6 +6,7 @@ series: "devlog"
 order: 8
 coverImage: "/images/devlog-8-cover.svg"
 tags: ["newsletter", "privacy", "markdown", "email", "buttondown", "templates"]
+draft: false
 ---
 
 import CalloutBox from '../../components/CalloutBox.astro';
