--- a/src/content/geo/1-what-is-geo-and-why-higher-ed-needs-it-now.mdx
+++ b/src/content/geo/1-what-is-geo-and-why-higher-ed-needs-it-now.mdx
@@ -6,6 +6,7 @@ tags: ["GEO", "Higher Education", "AI Search", "Marketing Strategy", "Digital Tr
 series: "geo"
 order: 1
 coverImage: "/images/geo-article-1-cover.svg"
+draft: false
 ---
 
 import CalloutBox from '../../components/CalloutBox.astro'
