--- a/src/content/devlog/1-platform-setup.mdx
+++ b/src/content/devlog/1-platform-setup.mdx
@@ -5,6 +5,7 @@ publishDate: 2025-05-21
 series: "devlog"
 order: 1
 coverImage: "/images/devlog-1-cover.svg"
+draft: false
 ---
 
 import CalloutBox from '../../components/CalloutBox.astro';
