--- a/src/content/devlog/3-dynamic-content.mdx
+++ b/src/content/devlog/3-dynamic-content.mdx
@@ -5,6 +5,7 @@ publishDate: 2025-05-23
 series: "devlog"
 order: 3
 coverImage: "/images/devlog-3-cover.svg"
+draft: false
 ---
 
 import CalloutBox from '../../components/CalloutBox.astro';
